0.743 (07.31.2006) - John Siracusa <siracusa@mindspring.com>

    * The object_class parameter to Manager methods now defaults to the 
      return value of the object_class() class method.
    * Passing invalid query parameters to Manager methods will now 
      cause a fatal error.
    * Fixed a bug that caused update() to fail for tables where all columns
      are part of the primary key.  (Reported by Danial Pearce)
    * Minor tweaks to the subselect-based limit/offset code.

0.742 (07.21.2006) - John Siracusa <siracusa@mindspring.com>

    * Added support for a more efficient subselect-based limit/offset 
      implementation for queries that would otherwise have to be
      scanned through manually.
    * Added a column class for PostgreSQL's BYTEA column type.
    * Added support for DBI bind_param() attributes for all column types.
    * Fixed a bug in the test suite that could cause the TIME(9)
      column type test to fail in Postgres.
    * Fixed some POD formatting errors.

0.741 (07.14.2006) - John Siracusa <siracusa@mindspring.com>

    * Added end_of_month_mode parameter to the interval column class.
    * Prevented perl_* code generation methods from attempting to 
      auto-initialize missing metadata.
    * Added name/value pair, JSON, and YAML helper methods.
    * Tweaked the JOIN syntax for MySQL in order to better accommodate
      MySQL version 5.0.12+.  (Reported by Glenn Gallien)
    * Some small POD corrections.

0.74 (06.30.2006) - John Siracusa <siracusa@mindspring.com>

    * Added the Time column type.
    * Added support for the changes_only parameter to the insert() method.
    * Documented the manager_base_class(es) Loader methods.
    * Fixed a bug that caused the Loader to refuse to use empty or 
      undefined class_prefix values.
    * Fixed a bug that prevented auto_* methods names from working in
      calls to the setup() method.
    * Removed redundant @ISA declaration from generated Manager classes.
